--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
   <title>BEN CASALINO</title>
   <link rel="shortcut icon" href="images/botu.ico">
+  <!-- animate css cdn -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+  <!-- or -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/main.css">
 </head>
@@ -13,11 +17,12 @@
   <header>
     <nav>
       <div class="header-left">
-        <img class="logo animated slideInLeft" src="images/botu.ico" />
+        <img class="logo animated wow slideInLeft" src="images/botu.ico" />
+
         <span class="header-name">BEN CASALINO
         </span>
       </div>
-      <div class="header-right">
+      <div class="header-right animated wow  slideInDown">
         <a class="nav-cta" href="#projects"> PROJECTS </a>
         <em class="animated fadeIn"> | </em>
         <a class="nav-cta" href="https://www.linkedin.com/in/bencasalino/" target="blank"> CONTACT </a>
@@ -36,154 +41,173 @@
         </h2>
         <div class="wrapper-row-icons">
           <a href="https://talent.galvanize.com/students/2070/jobs">
-            <img class="sm sm-icons" src="images/icons/sm-galvanize.gif">
+            <img class="sm sm-icons wow slideInDown" data-wow-duration=".2s" src="images/icons/sm-galvanize.gif">
           </a>
           <a href="mailto:bencasalino@gmail.com" target="top">
-            <img class="sm sm-icons" src="images/icons/sm-mail.svg">
+            <img class="sm sm-icons wow slideInDown" data-wow-duration=".5s" src="images/icons/sm-mail.svg">
           </a>
 
           <a href="https://www.linkedin.com/in/bencasalino/">
-            <img class="sm sm-icons" src="images/icons/sm-li.svg">
+            <img class="sm sm-icons wow slideInDown" data-wow-duration=".8s" src="images/icons/sm-li.svg">
           </a>
 
           <a href="https:/github.com/bencasalino">
-            <img class="sm sm-icons" src="images/icons/sm-gh.svg">
+            <img class="sm sm-icons wow slideInDown" data-wow-duration="1s" src="images/icons/sm-gh.svg">
           </a>
           <a href="https://www.instagram.com/benoftheuniverse/">
-            <img class="sm sm-icons" src="images/icons/sm-ig.svg">
+            <img class="sm sm-icons wow slideInDown" data-wow-duration="1.2s" src="images/icons/sm-ig.svg">
           </a>
-          <em class="animated fadeIn pipe"> &nbsp;|&nbsp;
+          <em class="animated fadeIn pipe wow slideInDown" data-wow-duration="1.5s"> &nbsp;|&nbsp;
           </em>
           <a href="images/BenCasalino-Resume.pdf" download>
-            <img class="sm sm-icons" src="images/icons/resume-black.gif"> </a>
+            <img class="sm sm-icons wow slideInDown" data-wow-duration="1.8s" src="images/icons/resume-black.gif"> </a>
         </div>
       </div>
       <!-- projects tab  -->
       <div class="bottom-section-right">
         <span id="projects"></span>
-                <h3> PROJECTS </h3>
+        <h3> PROJECTS </h3>
 
         <!-- row 1 /////////////////////////////////////////////////////// -->
         <!-- project name - Colorado Soccer Games app   -->
         <a href="https://teamfinder-app.firebaseapp.com/">
-          <img class="item" src="images/project_image_tiles/csg-logo.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration=".5s" src="images/project_image_tiles/csg-logo.png" /> </a>
         <!-- project name  - Social Cloud  proj -->
-        <a href="https://github.com/chris-swan/walk_ins_welcome">
-          <img class="item" src="images/project_image_tiles/social.png" /> </a>
+        <a href="https://social-cloud-trends.firebaseapp.com/">
+          <img class="item wow slideInDown" data-wow-duration=".8s" src="images/project_image_tiles/social.png" /> </a>
         <!-- project name  - SFDOC proj -->
         <a href="http://www.github.com/bencasalino">
-          <img class="item" src="images/project_image_tiles/sfdoc-black.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="1s" src="images/project_image_tiles/sfdoc-black.png" /> </a>
         <!-- project - Nuggets Logo Rework proj -->
         <a href="https://dribbble.com/shots/4099727-Denver-Nuggets-Logo-Remake">
-          <img class="item" src="images/project_image_tiles/nug.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="1.2s"
+          src="images/project_image_tiles/nug.png" /> </a>
         <!-- project name - team finder web app   -->
         <a href="https://teamfinder-app.firebaseapp.com/">
-          <img class="item" src="images/project_image_tiles/tfnew.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="1.5s" src="images/project_image_tiles/tfnew.png" /> </a>
         <!-- project name  - Walkin-s Welcome proj -->
         <a href="https://github.com/chris-swan/walk_ins_welcome">
-          <img class="item" src="images/project_image_tiles/wiw.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="1.8s"
+          src="images/project_image_tiles/wiw.png" /> </a>
         <!-- project name  - Clymb Logo  -->
         <a href="http://www.github.com/bencasalino">
-          <img class="item" src="images/project_image_tiles/clymb.png" /> </a>
-        <!-- project Dragic -->
-        <a href="https://dribbble.com/shots/4099727-Denver-Nuggets-Logo-Remake">
-          <img class="item" src="images/project_image_tiles/nug.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="2s"
+          src="images/project_image_tiles/clymb.png" /> </a>
+        <!-- project UPDATE THIS  -->
+        <a href="https://social-cloud-trends.firebaseapp.com/">
+          <img class="item wow slideInDown" data-wow-duration="2.2s" src="images/project_image_tiles/oldgroup.png" /> </a>
         <!-- project name - Game Cover Nash   -->
         <a href="https://dribbble.com/shots/2287089-Nash-Game-Cover">
-          <img class="item" src="images/project_image_tiles/nash.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="2.5s" src="images/project_image_tiles/nash.png" /> </a>
         <!-- project name  - pixel maker proj -->
         <a href="https://multco.us/it/multnomah-county-bridge-alerts">
-          <img class="item" src="images/project_image_tiles/mult.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="2.8s" src="images/project_image_tiles/mult.png" /> </a>
         <!-- project name  - Wacom  -->
         <a href="http://www.wacom.com/en-us">
-          <img alt="Wacom" class="item" src="images/project_image_tiles/wacom.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3s"
+          src="images/project_image_tiles/wacom.png" /> </a>
         <!-- project name g70 life cards -->
         <a href="https://github.com/g70-Life">
-          <img alt="g70.Life" class="item" src="images/project_image_tiles/g70_final.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.2s" src="images/project_image_tiles/g70_final.png"
+          /> </a>
         <br>
         <!-- row 2 /////////////////////////////////////////////////////// -->
         <!-- project name - Where Hackathon web app   -->
         <a href="https://github.com/mrsaxmannjr/Hackathon-Client">
-          <img alt="Where Hackathon" class="item" src="images/project_image_tiles/where.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.2s" src="images/project_image_tiles/where.png" /> </a>
         <!-- project name  - Planet Icons set proj -->
         <a href="https://dribbble.com/shots/3788281-Planets-Icon-Set">
-          <img alt="Plaents Icon Set" class="item" src="images/project_image_tiles/plan-it.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.4s" src="images/project_image_tiles/plan-it.png" /> </a>
         <!-- project name  - El Taco Diario -->
         <a href="http://anniehoogendoorn.com/tacoHomepage/">
-          <img alt="El Taco Diario" class="item" src="images/project_image_tiles/taco.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s" src="images/project_image_tiles/taco.png" /> </a>
         <!-- project name Periodic Table of Elements -->
         <a href="https://periodictable-of-elements.firebaseapp.com/">
-          <img alt="Periodic Table of Elements" class="item" src="images/project_image_tiles/tile-tptoe.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s" src="images/project_image_tiles/tile-tptoe.png" /> </a>
         <!-- project name - BSFB web app   -->
         <a href="http://www.bsfbbasketball.com">
-          <img alt="BSFB Website" class="item" src="images/project_image_tiles/bsfb.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s" src="images/project_image_tiles/bsfb.png" /> </a>
         <!-- project name  - GCI logo proj -->
         <a href="https://dribbble.com/bencasalino">
-          <img alt="GCI Logo" class="item" src="images/project_image_tiles/gci.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s"
+          src="images/project_image_tiles/gci.png" /> </a>
         <!-- project name  - BOTU proj -->
         <a href="https://soundcloud.com/benoftheuniverse">
-          <img class="item" src="images/project_image_tiles/botu_sc.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s" src="images/project_image_tiles/botu_sc.png" /> </a>
         <!-- project name nuggets -->
         <a href="https://dribbble.com/bencasalino">
-          <img class="item" src="images/project_image_tiles/dragic.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s" src="images/project_image_tiles/dragic.png" /> </a>
         <!-- project name - BSFB app   -->
         <a href="http://www.bsfbbasketball.com">
-          <img class="item" src="images/project_image_tiles/jon.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s"
+          src="images/project_image_tiles/jon.png" /> </a>
         <!-- project name  - ADAM proj -->
         <a href="http://www.bsfbbasketball.com">
-          <img class="item" src="images/project_image_tiles/adam.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.6s" src="images/project_image_tiles/adam.png" /> </a>
         <!-- project name  - BEN proj -->
         <a href="http://www.bsfbbasketball.com">
-          <img class="item" src="images/project_image_tiles/ben.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.4s"
+          src="images/project_image_tiles/ben.png" /> </a>
         <!-- project name RAFA proj  -->
         <a href="http://www.bsfbbasketball.com">
-          <img class="item" src="images/project_image_tiles/rafa.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.2s" src="images/project_image_tiles/rafa.png" /> </a>
         <br>
         <!-- row 3 /////////////////////////////////////////////////////// -->
-        <!-- project name - colo canvas web app   -->
-        <a href="https://github.com/bencasalino/colo_flag_canvas">
-          <img class="item" src="images/project_image_tiles/colo_square.png" /> </a>
+
         <!-- project name  - DDBOA -->
         <a href="https://www.linkedin.com/in/bencasalino/">
-          <img class="item" alt="DDBoA" src="images/project_image_tiles/ddboa.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s" src="images/project_image_tiles/ddboa.png" /> </a>
+        <!-- project name - colo canvas web app   -->
+        <a href="https://github.com/bencasalino/colo_flag_canvas">
+          <img class="item wow slideInDown" data-wow-duration="3.8s" src="images/project_image_tiles/colo_square.png" /> </a>
         <!-- project name  - PLUS QA proj -->
         <a href="https://www.linkedin.com/in/bencasalino/">
-          <img alt="PLUS QA" class="item" src="images/project_image_tiles/qa.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s"
+          src="images/project_image_tiles/qa.png" /> </a>
         <!-- project name Rocky Mountain Cup -->
         <a href="https://dribbble.com/shots/3785132-Rocky-Mountain-Cup-Infographic">
-          <img alt="Rocky Mountain Cup" class="item" src="images/project_image_tiles/cuprm.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s" src="images/project_image_tiles/cuprm.png" /> </a>
         <!-- project name - pixel web app   -->
         <a href="https://pixel-fac8e.firebaseapp.com/">
-          <img alt="Pixel Maker" class="item" src="images/project_image_tiles/pm.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s"
+          src="images/project_image_tiles/pm.png" /> </a>
         <!-- project name  - NBA #1 Pick Infographic  proj -->
         <a href="https://dribbble.com/bencasalino">
-          <img alt="NBA #1 Pick Infographic" class="item" src="images/project_image_tiles/nba.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s"
+          src="images/project_image_tiles/nba.png" /> </a>
         <!-- project name  - all bball logos  -->
         <a href="https://dribbble.com/bencasalino">
-          <img alt="All Baseketball Logos" class="item" src="images/project_image_tiles/logo-grid.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s" src="images/project_image_tiles/logo-grid.png" /> </a>
         <!-- project name - mammoth wine co.  -->
         <a href="https://dribbble.com/shots/3785098-Mammoth-Wine-Co">
-          <img alt="Mammoth Wine Co." class="item" src="images/project_image_tiles/mammoth_grid.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s" src="images/project_image_tiles/mammoth_grid.png" /> </a>
         <!-- project name - Keyboard Drums app   -->
         <a href="https://keyboard-drums.firebaseapp.com/">
-          <img alt="Keyboard Drums Project" class="item" src="images/project_image_tiles/jsdrums.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s" src="images/project_image_tiles/jsdrums.png" /> </a>
         <!-- project name  - Casalino Chiropractic proj -->
         <a href="https://dribbble.com/bencasalino">
-          <img alt="Casalino Chiropractic Logo" class="item" src="images/project_image_tiles/casa.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s" src="images/project_image_tiles/casa.png" /> </a>
         <!-- project name - Quark  -->
         <a href="https://dribbble.com/shots/2782521-Quark-Package-Redesign">
-          <img alt="QuarkXpress Package Redesign" class="item" src="images/project_image_tiles/quark.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s" src="images/project_image_tiles/quark.png" /> </a>
         <!-- project graphic design logo elec -->
         <a href="https://dribbble.com/shots/2262877-Logo-Idea">
-          <img alt="Electrical Services LTD Logo" class="item" src="images/project_image_tiles/elec-3.png" /> </a>
+          <img class="item wow slideInDown" data-wow-duration="3.8s" src="images/project_image_tiles/elec-3.png" /> </a>
       </div>
     </div>
-
   </main>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91622684-3">
     // keep script tag below <-- known bug
   </script>
+
+  <!--scripts for wow js   -->
+  <script src="wow/dist/wow.min.js">
+  </script>
+  <script>
+    new WOW().init();
+  </script>
+
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
